--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Контакты в шапке
+        <a class="header-email" href="mailto:deformator03@mail.ru">deformator03@mail.ru</a>
+        <a class="header-phone" href="tel:+79228208661">+7 922 820 86 61</a>
       </div>
     </header>
 
