--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Неопознанный Енот(всем Софиям привет)</h1>
+        <h1 class="heading">idkwhatimdoingZ</h1>
         <p>Junior верстальщик</p>
       </div>
     </section>
