--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure>
+          <img src="files/house-mouse.jpg" width="928" alt="Фотография красивой мыши">
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
         <h3>Чем могу быть полезен</h3>
@@ -35,10 +37,12 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" alt="Сайт магазина товаров для дома">
+        </figure>
         <h3>Магазин товаров для дома</h3>
         <p>Мой первый сайт.</p>
-
+        <a class="button" href='source/project1/index.html'>ОТКРЫТЬ СТРАНИЦУ</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -46,7 +50,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        Контакты в подвале
+        <a class="footer-email" href="mailto:deformator03@mail.ru">deformator03@mail.ru</a>
+        <a class="footer-phone" href="tel:+79228208661">+7 922 820 86 61</a>
       </div>
     </footer>
   </body>
